@@ -182,6 +182,7 @@ namespace MonoDevelop.Gettext.Translator {
             this.frame1.Add(this.GtkAlignment2);
             this.radiobuttonKnown = new Gtk.RadioButton(Mono.Unix.Catalog.GetString("_Known Language"));
             this.radiobuttonKnown.Name = "radiobuttonKnown";
+            this.radiobuttonKnown.Active = true;
             this.radiobuttonKnown.DrawIndicator = true;
             this.radiobuttonKnown.UseUnderline = true;
             this.radiobuttonKnown.Group = new GLib.SList(System.IntPtr.Zero);
