@@ -1,5 +1,12 @@
 2007-11-16  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Gettext.Editor/POEditorWidget.cs,
+	  MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
+	  MonoDevelop.Gettext/TranslationProject.cs,
+	  MonoDevelop.Gettext/Catalog.cs: Added some gui update code.
+
+2007-11-16  Mike Krüger <mkrueger@novell.com> 
+
 	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs,
 	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
 	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
